orchestracommunity/objects/Work_Event__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Work Events</relationshipLabel>
        <relationshipName>Work_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the work to be completed.</description>
        <inlineHelpText>Description of the work to be completed.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Building the work is scheduled for.</description>
        <inlineHelpText>Building the work is scheduled for.</inlineHelpText>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Events</relationshipLabel>
        <relationshipName>Work_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Work event start time.</description>
        <inlineHelpText>Work event start time.</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stop_Time__c</fullName>
        <description>Work event stop time.</description>
        <inlineHelpText>Work event stop time.</inlineHelpText>
        <label>Stop Time</label>
        <type>DateTime</type>
    </fields>
    <label>Work Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Location__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Stop_Time__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WE-{000000}</displayFormat>
        <label>Work Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>